lanecwe-Prod/src/objects/Training__c.object
<CustomObject>
    <description>Tracks Training sessions for Implementation Team</description>
    <fields>
        <fullName>Attendees__c</fullName>
        <label># Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clients__c</fullName>
        <label># Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Training__c</fullName>
        <label>Date of Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Services</label>
        <referenceTo>Implementation_Services__c</referenceTo>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_Sent__c</fullName>
        <label>Method Sent</label>
        <picklist>
            <controllingField>Who_Sent__c</controllingField>
            <picklistValues>
                <fullName>Exact Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown/Customer Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Rate__c</fullName>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>Adobe Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio 101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conferencing Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Assisted Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <label># Registered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the trainer name from eligible IST users.</inlineHelpText>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Follow-up (Post-Welcome)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Information (Welcome Email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Campaign (Non Usage Reminder)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Campaign (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Campaign (Tools)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivation Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-User Satisfaction Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec Sponsor (Pre-Welcome)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions (Pre-Welcome2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholder Survey</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Undelivered__c</fullName>
        <label># Undelivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_Sent__c</fullName>
        <label>Who Sent</label>
        <picklist>
            <picklistValues>
                <fullName>PGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training/Adoption Session</label>
    <nameField>
        <displayFormat>TS-{0000000}</displayFormat>
        <label>Training/Adoption Session #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training/Adoption Sessions</pluralLabel>
    <recordTypes>
        <fullName>Adoption</fullName>
        <active>true</active>
        <label>Adoption</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>